<resources>
    <string name="app_name">Smart Health</string>
    <string name="app_title">Smart Health</string>
    <string name="logo_content_description">Smart Health Logo</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="txt_copyright">2021</string>
    <string name="txt_app_version">App Version 1.0</string>
    <string name="edttxt_email_hint">example@example.com</string>
    <string name="edttxt_password_hint">ExamplePassword123</string>
    <string name="txt_title_sign_up">Sign Up</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_repeat_password">Repeat password</string>
    <string name="edttxt_first_name_hint">Joe</string>
    <string name="edttxt_last_name_hint">Biden</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_title_home">Home</string>
    <string name="btn_placeholder_content_description">Placeholder</string>
    <string name="btn_bmi_home_content_description">Body Mass Index button</string>
    <string name="btn_medical_notes_home_content_description">Medical Notes button</string>
    <string name="btn_sign_out_home">Sign Out</string>
    <string name="btn_exit_home">Exit</string>
    <string name="btn_home">Home</string>
    <string name="btn_calculate_bmi">Calculate and save</string>
    <string name="btn_history">History</string>
    <string name="btn_update">Update</string>
    <string name="txt_height">Height in centimeters</string>
    <string name="txt_weight">Weight in kilograms</string>
    <string name="txt_bmi_status">---</string>
    <string name="edttxt_height_hint">176</string>
    <string name="edttxt_weight_hint">60</string>
    <string name="bmi_content_description">Body mass index status</string>
    <string name="txt_title_bmi">Body Mass Index</string>
    <string name="txt_title_bmi_history">BMI History</string>
    <string name="txt_bmi">Body Mass Index</string>
    <string name="edttxt_bmi_hint">19</string>
    <string name="txt_date_bmi_row">2021:01:01</string>
    <string name="txt_height_bmi_row">Height</string>
    <string name="txt_weight_bmi_row">Weight</string>
    <string name="txt_bmi_label_bmi_row">BMI</string>
    <string name="txt_title_medical_notes">Medical Notes</string>
    <string name="btn_add_medical_note_content_description">Add new medical note</string>
    <string name="txt_note_title">Title</string>
    <string name="txt_note_category">Category</string>
    <string name="txt_note">Note</string>
    <string name="txt_note_hint">Your note will be displayed here :D</string>
    <string name="edttxt_note_title_hint">Note title</string>
    <string name="edttxt_note_category_hint">Note category</string>
    <string name="edttxt_note_hint">Type your note here :D</string>
    <string name="btn_save">Save</string>
    <string name="txt_time">16:40</string>
    <string name="no_notes_content_description">No notes</string>
    <string name="txt_no_notes">No notes</string>
    <string name="txt_title_water_minder">Water Minder</string>
    <string name="txt_water_capacity">Daily amount of water to drink in mL</string>
    <string name="edttxt_water_capacity">2500</string>
    <string name="txt_water_now">Amount of water you have drunk in mL</string>
    <string name="edttxt_water_now">2000</string>
    <string name="txt_water_cup">Cup of water in mL</string>
    <string name="edttxt_water_cup">250</string>
    <string name="btn_add_water_cup_content_description">Add a cup of water</string>
    <string name="btn_remove_water_cup_content_description">Remove a cup of water</string>
    <string name="water_content_description">Water level status</string>
    <string name="txt_title_water_minder_history">Water Minder History</string>
    <string name="txt_title_sleep_tracker">Sleep Tracker</string>
    <string name="txt_sleep_1">Today you slept</string>
    <string name="txt_sleep_2">---</string>
    <string name="txt_sleep_3">Times</string>
    <string name="txt_sleep_5">Average daily sleep</string>
    <string name="btn_sleep_tracker_home_content_description">Sleep Tracker button</string>
    <string name="txt_title_about">About</string>
</resources>